# FabricTools

./: .gitignore  README.md
CapacityAutoScale/: NB_CapacityAutoScale.ipynb  README.md
ClonePipeline/: NB_ClonePipeline.ipynb
FabricAPI/: NP_FabricAPI.ipynb  README.md  _cache_token.json  _rest.py  _util.py  auth.py  fabric_base.py  fabric_capacity.py  fabric_workspace.py  faburest.py  faburest_orig.py  unit_tests.py
FabricAPI/regression-tests/: test.py  test_connections.py  unit_test_data_warehouse.py  unit_test_deployment_pipelines.py  unit_test_pagination.py  unit_test_workspaces_capacity.py  unit_tests.py
FabricAPI/tests/: unit_tests.py
FabricAPI/v2/: _restclient.py  _util.py  faburest.py  item.py  lakehouse.py  pipeline.py  semanticmodel.py  sqlendpoint.py  workspace.py
FabricDWBackup/: README.md
FabricDWQueryCostAnalyzer/: NB_DW_Load_Cost_Analyzer.ipynb  NB_Deployment_DW_Query_Analyzer.ipynb  README.md
FabricWorkspaceFetch/: main.py  main_with_longrunning copy.py
FabricWorkspaceFetchProject/: project_layout.txt  pyproject.toml
FabricWorkspaceFetchProject/scratch/: main_getdatabase_project_notworking.py  main_needlr.py
FabricWorkspaceFetchProject/src/FabricWorkspaceFetch/: Authentication.py  FabricResponse.py  FetchWorkspace.py  __init__.py
FabricWorkspaceFetchProject/tests/api_tests/: api_test.py
FabricWorkspaceFetchProject/tests/common_tests/: __init__.py
FabricWorkspaceFetchProject/tests/scratch_tests/: context.py  main.py  main_with_longrunning.py  test.py
GetNotebookDefinition/: NB_Fabric_Rest_Get_Notebook_Definition.ipynb  README.md
(+13 files in other folders)
